--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -53,7 +53,7 @@ body {
   margin: 4vw auto;
   background-color: #fff;
   border-radius: 9px;
-  overflow: hidden;
+  overflow:visible;
   box-shadow: 0 2rem 6rem 0.5rem rgba($color-grey-dark-1, 0.2);
 
   display: grid;
