--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -36,7 +36,7 @@ body {
   margin: 4vw auto;
   background-color: #fff;
   border-radius: 9px;
-  overflow: hidden;
+  overflow: visible;
   box-shadow: 0 2rem 6rem 0.5rem rgba(97, 85, 81, 0.2);
   display: grid;
   grid-template-rows: 10rem minmax(100rem, auto);
